cmake_minimum_required(VERSION 3.17.0 FATAL_ERROR)

project(example)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(QT_MAJOR_VERSION "5")
set(KF_MAJOR_VERSION "5")
set(QT_MIN_VERSION "5.10.0")
set(KF_MIN_VERSION "5.16.0")

find_package(QT NAMES Qt6 REQUIRED COMPONENTS Core)
message(STATUS "Found Qt ${QT_VERSION}")
set(QT_MAJOR_VERSION ${QT_VERSION_MAJOR})
set(QT_MIN_VERSION "6.5.0")
set(KF_MAJOR_VERSION "6")
set(KF_MIN_VERSION "5.240.0")

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(ECM REQUIRED NO_MODULE)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/ ${ECM_MODULE_PATH})

find_package(Qt${QT_MAJOR_VERSION} ${QT_MIN_VERSION} COMPONENTS Widgets REQUIRED)
find_package(KF${KF_MAJOR_VERSION} ${KF_MIN_VERSION} REQUIRED COMPONENTS
    Config
    I18n
)

add_executable(example main.cpp)
include_directories(/usr/include/labplot/)

target_link_libraries(example labplot Qt${QT_MAJOR_VERSION}::Widgets KF${KF_MAJOR_VERSION}::ConfigCore KF${KF_MAJOR_VERSION}::I18n)
